bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: ';' expected but 'else' found.
} else if (litMessage()=="L") {
  ^BDR:21: error: Unmatched closing brace '}' ignored here
	}
        ^BDR:22: error: eof expected but '}' found.
}
^